--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>dev.michaud.greenpanda</groupId>
-  <artifactId>playercompass</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>explorerstoolkit</artifactId>
+  <version>0.1</version>
   <packaging>jar</packaging>
 
-  <name>PlayerCompass</name>
+  <name>Explorer's Toolkit</name>
 
-  <description>Adds a player compass that can be used to find other players</description>
+  <description>Makes it much easier and viable to explore without using the F3 menu for navigation</description>
   <properties>
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -68,13 +68,14 @@
     <dependency>
       <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.19-R0.1-SNAPSHOT</version>
+      <version>1.19.4-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>dev.michaud.greenpanda</groupId>
       <artifactId>core</artifactId>
-      <version>0.0.2</version>
+      <version>0.1.2</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
